# unsu_continue

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  ExhaustiveCropper.cpp  FLANNDetector.h  Feature.cpp  FeatureLoader.cpp  FeatureLoader.h  FeaturePCA.cpp  FeaturePCA.h  FeaturePartitioner.h  FeatureWriter.cpp  FeatureWriter.h  Image.cpp  ImageCropper.h  KNNDetector.cpp  KNNDetector.h  Makefile  PoseCPP.sln  PoseCPP.vcxproj  RandomCropper.h  main.cpp
HumanPoseDetector/: ExhaustiveCropper.h  Feature.cpp  Feature.h  FeatureLoader.cpp  FeatureLoader.h  FeaturePartitioner.cpp  FeatureWriter.cpp  FeatureWriter.h  HumanDetector.cpp  HumanDetector.h  HumanPoseDetector.1  Image.cpp  Image.h  ImageCropper.cpp  ImageCropper.h  KNNDetector.cpp  KNNDetector.h  Makefile  NegativeCollector.cpp  NegativeCollector.h  PatchDetector.cpp  PatchDetector.h  RandomCropper.cpp  RandomCropper.h  SVMDetector.cpp  SVMDetector.h  main.cpp  ori_svm.txt  script.cpp  script.h
HumanPoseDetector.xcodeproj/: project.pbxproj
cmake/: FindBoost.cmake  FindTBB.cmake
debug/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: Cluster.h  ExhaustiveCropper.h  FLANNDetector.h  Feature.h  FeatureLoader.h  FeaturePCA.h  FeaturePartitioner.h  FeatureWriter.h  HoGAlignmentDetector.h  Image.h  ImageCropper.h  KMeanDetector.h  KNNDetector.h  LatentDetector.h  PatchClassDetector.h  PatchDetector.h  RandomCropper.h  Result.h  SVMDetector.h  Transform.h  TwoStageDetector.h  VoronoiDetector.h
legacy/: ori_svm.txt  svm_12.txt
res/: arm_clusters.txt  body_parts_clusters.txt  cascading_setting.ini  clusteranalysis_setting.ini  clusterpurify_setting.ini  core_body_parts_clusters.txt  corp_setting.ini  cos_network_setting.ini  crop_setting.ini  cv_setting.ini  daemon_setting.ini  head_clusters_trimmed_2.txt  head_transforms.txt  head_transforms_140.txt  head_transforms_20.txt  head_transforms_52.txt  head_transforms_avg.txt  kmean_setting.ini  knn_setting.ini  network_setting.ini  network_setting_par.ini  pca_setting.ini  setting.ini  tree_setting.ini  voronoi_setting.ini
script/: cl_res_drawer.rb  clu_img_mover.rb  pca_verify.nb  readme.txt  (+1 more)
src/: CMakeLists.txt  Cluster.cpp  ExhaustiveCropper.cpp  FLANNDetector.cpp  Feature.cpp  FeatureLoader.cpp  FeaturePCA.cpp  FeaturePartitioner.cpp  FeatureWriter.cpp  HoGAlignmentDetector.cpp  Image.cpp  KMeanDetector.cpp  KNNDetector.cpp  LatentDetector.cpp  PatchClassDetector.cpp  PatchDetector.cpp  RandomCropper.cpp  SVMDetector.cpp  Transform.cpp  TwoStageDetector.cpp  VoronoiDetector.cpp  main.cpp
src/utility/: distance.cpp  main.cpp  main_bark.cpp
(+49 files in other folders)
